[gd_scene load_steps=28 format=3 uid="uid://140cwmlvmpo5"]

[ext_resource type="Script" path="res://scenes/Towers/Orb Tower/orb_tower.gd" id="1_ald6h"]
[ext_resource type="Script" path="res://scenes/Towers/Orb Tower/range.gd" id="2_fhlse"]
[ext_resource type="Texture2D" uid="uid://dj0arnbs8f0jr" path="res://assets/Towerpack1/Towers bases/PNGs/Tower 02.png" id="3_3jqlu"]
[ext_resource type="Texture2D" uid="uid://db1c3ju34jivp" path="res://assets/Towerpack1/Towers Weapons/Tower 02/Spritesheets/Tower 02 - Level 03 - Weapon.png" id="6_vo3tx"]
[ext_resource type="Script" path="res://scenes/Towers/Orb Tower/projection_spawner.gd" id="7_8c6w4"]
[ext_resource type="PackedScene" uid="uid://dgoocohbvqsli" path="res://scenes/Towers/Orb Tower/Orb.tscn" id="8_wfwti"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s6s7v"]
radius = 400.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y82am"]
bg_color = Color(0.705882, 0.705882, 0.705882, 0.470588)
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jl1o"]
size = Vector2(64, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mqjh4"]
bg_color = Color(0, 0, 0, 0.372549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1p25c"]
bg_color = Color(0.333333, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqnqo"]
atlas = ExtResource("6_vo3tx")
region = Rect2(192, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5efq"]
atlas = ExtResource("6_vo3tx")
region = Rect2(256, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_otr4k"]
atlas = ExtResource("6_vo3tx")
region = Rect2(320, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqhpq"]
atlas = ExtResource("6_vo3tx")
region = Rect2(384, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_npm1p"]
atlas = ExtResource("6_vo3tx")
region = Rect2(448, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyopy"]
atlas = ExtResource("6_vo3tx")
region = Rect2(512, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0e6a"]
atlas = ExtResource("6_vo3tx")
region = Rect2(576, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuskg"]
atlas = ExtResource("6_vo3tx")
region = Rect2(640, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gu1w"]
atlas = ExtResource("6_vo3tx")
region = Rect2(704, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_61i6x"]
atlas = ExtResource("6_vo3tx")
region = Rect2(768, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt4l0"]
atlas = ExtResource("6_vo3tx")
region = Rect2(896, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd3y6"]
atlas = ExtResource("6_vo3tx")
region = Rect2(960, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqc0m"]
atlas = ExtResource("6_vo3tx")
region = Rect2(1024, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u0un"]
atlas = ExtResource("6_vo3tx")
region = Rect2(1088, 62, 64, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_700t3"]
atlas = ExtResource("6_vo3tx")
region = Rect2(1152, 62, 64, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_n31pi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqnqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5efq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otr4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqhpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npm1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyopy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0e6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuskg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gu1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61i6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt4l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd3y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqc0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u0un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_700t3")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_xqnqo")
}],
"loop": false,
"name": &"Attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqnqo")
}],
"loop": false,
"name": &"Idle",
"speed": 10.0
}]

[node name="OrbTower" type="StaticBody2D" groups=["Tower"]]
collision_layer = 3
collision_mask = 0
script = ExtResource("1_ald6h")
health = 1000

[node name="Range" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 3
script = ExtResource("2_fhlse")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_s6s7v")

[node name="RangeIndicator" type="Panel" parent="."]
visible = false
z_index = -1
offset_left = -400.0
offset_top = -408.0
offset_right = 400.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_y82am")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0jl1o")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -34.0
offset_top = -106.0
offset_right = 306.0
offset_bottom = -79.0
scale = Vector2(0.2, 0.2)
theme_override_constants/outline_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_mqjh4")
theme_override_styles/fill = SubResource("StyleBoxFlat_1p25c")
value = 100.0
show_percentage = false

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("3_3jqlu")
region_enabled = true
region_rect = Rect2(128, 64, 64, 128)

[node name="Weapon" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -85)
sprite_frames = SubResource("SpriteFrames_n31pi")
animation = &"Idle"

[node name="ProjectionSpawner" type="Node2D" parent="."]
position = Vector2(0, -85)
script = ExtResource("7_8c6w4")
projection = ExtResource("8_wfwti")

[connection signal="add_target" from="." to="." method="_on_add_target"]
[connection signal="remove_target" from="." to="." method="_on_remove_target"]
[connection signal="take_damage" from="." to="." method="_on_take_damage"]
[connection signal="body_entered" from="Range" to="Range" method="_on_body_entered"]
[connection signal="body_exited" from="Range" to="Range" method="_on_body_exited"]
[connection signal="frame_changed" from="Weapon" to="." method="_on_weapon_frame_changed"]
[connection signal="spawn" from="ProjectionSpawner" to="ProjectionSpawner" method="_on_spawn"]
